[package]
name = "modesetting"
description = "High-level access to modesetting functionality."
version = "0.2.3"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "LGPL-3.0"
repository = "https://github.com/Slabity/modesetting-rs"
build = "build.rs"

[features]
user = []
dumbbuffer = []

[build-dependencies]
gcc = "0.3.32"
bindgen = "0.19.0"

[dependencies]
libc = "0.2.15"
error-chain = "*"
