[package]
name = "modesetting"
description = "High-level access to modesetting functionality."
version = "0.2.3"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "LGPL-3.0"
repository = "https://github.com/Slabity/modesetting-rs"
build = "build.rs"

[features]
dumbbuffer = []

[build-dependencies]
libbindgen = { git = "https://github.com/servo/rust-bindgen" }

[dependencies]
libc = "*"
error-chain = "*"
