[package]
name = "modesetting"
description = "High-level access to modesetting functionality."
version = "0.2.3"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "LGPL-3.0"
repository = "https://github.com/Slabity/modesetting-rs"
build = "build.rs"

[features]
user = []
dumbbuffer = []

[build-dependencies]
cc = "1.0"
bindgen = "0.65.1"

[dependencies]
libc = "0.2.15"
error-chain = "*"
