[package]
name = "drm-sys"
description = "Bindings to the DRM API"
version = "0.0.2"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
repository = "https://github.com/Slabity/modesetting-rs"
build = "build.rs"

[dependencies]
libc = "0.2.20"

[build-dependencies]
bindgen = "0.22.0"
