[package]
name = "drm-sys"
description = "Bindings to the DRM API"
version = "0.0.2"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
repository = "https://github.com/Slabity/modesetting-rs"
build = "build.rs"

[dependencies]
libc = "0.2.20"

[features]
default = []
use_bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.25", optional = true }